Bug 169173 - FILESAVE DOCX: File with SDT dropdown can't be open in Word after roundtripping
Summary: FILESAVE DOCX: File with SDT dropdown can't be open in Word after roundtripping
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-31 16:52 UTC by Karthik
Modified: 2025-11-12 11:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
forum-mso-en4-551337-mini (26.69 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-31 16:53 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-10-31 16:52:22 UTC
Description:
DOCX files with SDT dropdowns are not imported properly, this results in corrupted file when saved as DOCX. The resulting file can't be opened in Word.

Steps to Reproduce:
1.Open the attached file
2.Save it as DOCX
3.Open the resulting file Word

Actual Results:
File opens without any error in word

Expected Results:
Word can't open the file


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-10-31 16:53:30 UTC
Created attachment 203638 [details]
forum-mso-en4-551337-mini
Comment 2 Commit Notification 2025-11-10 18:38:12 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9c04b6e94bf9c320a91bd1528cfb3932b2b2728

tdf#169173 Fix import of dropdown SDTs in a table

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-11-10 20:50:25 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d5ee7dba9c826ef7c55760cf1bb27fdde176f972

tdf#169173 Fix import of dropdown SDTs in a table

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.