tdf#169173 Fix import of dropdown SDTs in a table

When we have nested run-level SDTs in the document, dropdown SDTs are
not imported properly.

Change-Id: I5aaa3f2c7900c6920da1acbb83690251d24233a5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193289
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 3db40e042e5f13f7414b8c557a9069155a29dc79)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193749
Tested-by: Jenkins
(cherry picked from commit b9c04b6e94bf9c320a91bd1528cfb3932b2b2728)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195636
Tested-by: Michael Stahl <michael.stahl@collabora.com>